--- a/src/main/resources/workoutJournal/LogSleep.fxml
+++ b/src/main/resources/workoutJournal/LogSleep.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -38,6 +40,11 @@
                   <TextField fx:id="sleepYear" layoutX="134.0" layoutY="193.0" prefHeight="26.0" prefWidth="146.0" promptText="yyyy" />
                   <Label alignment="CENTER_RIGHT" layoutX="62.0" layoutY="148.0" prefHeight="17.0" prefWidth="60.0" text="Month:" />
                   <Label alignment="CENTER_RIGHT" layoutX="62.0" layoutY="197.0" prefHeight="17.0" prefWidth="60.0" text="Year:" />
+                  <ImageView fitHeight="84.0" fitWidth="119.0" layoutX="15.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
             <Pane prefHeight="282.0" prefWidth="412.0" GridPane.rowIndex="1">
