--- a/src/main/resources/workoutJournal/LogWorkout.fxml
+++ b/src/main/resources/workoutJournal/LogWorkout.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -32,6 +34,11 @@
                      </font>
                   </Label>
                   <DatePicker fx:id="date" layoutX="103.0" layoutY="150.0" prefHeight="48.0" prefWidth="206.0" promptText="Press to enter date ---&gt;" />
+                  <ImageView fitHeight="84.0" fitWidth="119.0" layoutX="15.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
             <GridPane prefHeight="140.0" prefWidth="381.0" GridPane.rowIndex="1">
