--- a/src/main/resources/workoutJournal/LogWorkout.fxml
+++ b/src/main/resources/workoutJournal/LogWorkout.fxml
@@ -53,7 +53,7 @@
                <children>
                   <Pane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="running" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleRunning" prefHeight="70.0" prefWidth="115.0" text="Running">
+                        <Button id="sale" fx:id="running" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleRunning" prefHeight="70.0" prefWidth="115.0" stylesheets="@stylesheet.css" text="Running">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -64,7 +64,7 @@
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                      <children>
-                        <Button fx:id="strength" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleStrength" prefHeight="70.0" prefWidth="115.0" text="Strength">
+                        <Button id="sale" fx:id="strength" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleStrength" prefHeight="70.0" prefWidth="115.0" stylesheets="@stylesheet.css" text="Strength">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -75,7 +75,7 @@
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                      <children>
-                        <Button fx:id="skiing" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleSkiing" prefHeight="70.0" prefWidth="115.0" text="Skiing">
+                        <Button id="sale" fx:id="skiing" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleSkiing" prefHeight="70.0" prefWidth="115.0" stylesheets="@stylesheet.css" text="Skiing">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -86,7 +86,7 @@
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
-                        <Button fx:id="other" alignment="CENTER" contentDisplay="CENTER" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleOther" prefHeight="70.0" prefWidth="115.0" text="Other">
+                        <Button id="sale" fx:id="other" alignment="CENTER" contentDisplay="CENTER" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleOther" prefHeight="70.0" prefWidth="115.0" stylesheets="@stylesheet.css" text="Other">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -99,7 +99,7 @@
             </GridPane>
             <Pane prefHeight="181.0" prefWidth="400.0" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="backFromLogWorkout" layoutX="103.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleBackFromLogWorkout" prefHeight="48.0" prefWidth="206.0" text="Back">
+                  <Button id="sale" fx:id="backFromLogWorkout" layoutX="103.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleBackFromLogWorkout" prefHeight="48.0" prefWidth="206.0" stylesheets="@stylesheet.css" text="Back">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -107,15 +107,15 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <TextField fx:id="distanceField" layoutX="103.0" layoutY="17.0" prefHeight="26.0" prefWidth="146.0" />
-                  <TextField fx:id="durationField" layoutX="103.0" layoutY="50.0" prefHeight="26.0" prefWidth="146.0" />
+                  <TextField fx:id="distanceField" layoutX="103.0" layoutY="17.0" prefHeight="26.0" prefWidth="146.0" style="-fx-background-radius: 8;" />
+                  <TextField fx:id="durationField" layoutX="103.0" layoutY="50.0" prefHeight="26.0" prefWidth="146.0" style="-fx-background-radius: 8;" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="21.0" prefHeight="17.0" prefWidth="51.0" text="Distance:" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="55.0" prefHeight="17.0" prefWidth="51.0" text="Duration:" />
-                  <Button fx:id="reset" layoutX="170.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleReset" prefHeight="17.0" prefWidth="73.0" text="Reset">
+                  <Button id="sale" fx:id="reset" layoutX="170.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleReset" prefHeight="17.0" prefWidth="73.0" style="-fx-font-size: 13;" stylesheets="@stylesheet.css" text="Reset">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
-                  <Button fx:id="addWorkout" layoutX="103.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleAddWorkout" prefHeight="70.0" prefWidth="206.0" text="Add Workout">
+                  <Button id="sale" fx:id="addWorkout" layoutX="103.0" layoutY="125.0" mnemonicParsing="false" onAction="#handleAddWorkout" prefHeight="61.0" prefWidth="206.0" stylesheets="@stylesheet.css" text="Add Workout">
                      <font>
                         <Font size="20.0" />
                      </font>
