--- a/src/main/resources/workoutJournal/Overview.fxml
+++ b/src/main/resources/workoutJournal/Overview.fxml
@@ -25,8 +25,8 @@
         <rowConstraints>
           <RowConstraints maxHeight="125.0" minHeight="5.0" prefHeight="80.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="464.0" minHeight="10.0" prefHeight="332.2302551269531" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="439.0" minHeight="10.0" prefHeight="202.76974487304688" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="181.0" minHeight="10.0" prefHeight="110.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="439.0" minHeight="10.0" prefHeight="186.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="181.0" minHeight="10.0" prefHeight="131.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0">
@@ -47,7 +47,7 @@
                <children>
                   <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="30.0" prefHeight="17.0" prefWidth="45.0" text="Month:" />
                   <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="59.0" prefHeight="17.0" prefWidth="45.0" text="Year:" />
-                  <Button fx:id="updateOverview" layoutX="127.0" layoutY="95.0" mnemonicParsing="false" onAction="#handleUpdateOverview" prefHeight="42.0" prefWidth="159.0" text="Update Overview">
+                  <Button id="sale" fx:id="updateOverview" layoutX="127.0" layoutY="95.0" mnemonicParsing="false" onAction="#handleUpdateOverview" prefHeight="42.0" prefWidth="159.0" style="-fx-font-size: 16;" stylesheets="@stylesheet.css" text="Update Overview">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -55,8 +55,8 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <TextField fx:id="overviewMonth" layoutX="127.0" layoutY="25.0" promptText="mm" />
-                  <TextField fx:id="overviewYear" layoutX="126.0" layoutY="55.0" promptText="yyyy" />
+                  <TextField fx:id="overviewMonth" layoutX="127.0" layoutY="25.0" promptText="mm" style="-fx-background-radius: 8;" />
+                  <TextField fx:id="overviewYear" layoutX="126.0" layoutY="55.0" promptText="yyyy" style="-fx-background-radius: 8;" />
                   <Label alignment="CENTER_RIGHT" layoutX="28.0" layoutY="277.0" prefHeight="17.0" prefWidth="144.0" text="Progress for distance goal" />
                   <ProgressBar fx:id="distanceProgress" layoutX="185.0" layoutY="276.0" prefWidth="200.0" progress="0.0" />
                   <Label layoutX="70.0" layoutY="153.0" text="Average sleep was" />
@@ -72,8 +72,8 @@
                   <CubicCurve fx:id="neutral" controlX1="-23.5" controlX2="3.5" controlY1="31.0" controlY2="31.0" endX="3.5" endY="31.0" fill="WHITE" layoutX="249.0" layoutY="201.0" startX="-23.5" startY="31.0" stroke="BLACK" visible="false" />
                   <CubicCurve fx:id="lessHappy" controlX1="-23.5" controlX2="3.5" controlY1="31.0" controlY2="31.0" endX="3.5" endY="17.0" fill="WHITE" layoutX="248.0" layoutY="209.0" startX="-23.5" startY="17.0" stroke="BLACK" visible="false" />
                   <CubicCurve fx:id="happy" controlX1="-23.5" controlX2="3.5" controlY1="31.0" controlY2="31.0" endX="3.5" endY="8.0" fill="WHITE" layoutX="248.0" layoutY="215.0" startX="-23.5" startY="8.0" stroke="BLACK" visible="false" />
-                  <TextField fx:id="distanceGoalField" layoutX="184.0" layoutY="306.0" prefHeight="26.0" prefWidth="102.0" promptText="Distance goal" />
-                  <Button fx:id="setGoal" layoutX="323.0" layoutY="306.0" mnemonicParsing="false" onAction="#handleSetGoal" text="Set goal">
+                  <TextField fx:id="distanceGoalField" layoutX="184.0" layoutY="306.0" prefHeight="26.0" prefWidth="102.0" promptText="Distance goal" style="-fx-background-radius: 8;" />
+                  <Button id="sale" fx:id="setGoal" layoutX="323.0" layoutY="306.0" mnemonicParsing="false" onAction="#handleSetGoal" style="-fx-font-size: 13;" stylesheets="@stylesheet.css" text="Set goal">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -81,26 +81,26 @@
                   <Label layoutX="292.0" layoutY="310.0" text="km" />
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+            <Pane prefHeight="120.0" prefWidth="412.0" GridPane.rowIndex="2">
                <children>
                   <Label layoutX="75.0" layoutY="40.0" text="You went running" />
                   <Label alignment="CENTER_RIGHT" layoutX="75.0" layoutY="60.0" prefHeight="17.0" prefWidth="95.0" text="You went skiing" />
                   <Label alignment="CENTER_RIGHT" layoutX="36.0" layoutY="80.0" prefHeight="17.0" prefWidth="134.0" text="You did strength training" />
                   <Label layoutX="97.0" layoutY="100.0" text="You did other" />
-                  <Label layoutX="51.0" layoutY="140.0" text="Average distance was" />
-                  <Label alignment="CENTER_RIGHT" layoutX="52.0" layoutY="160.0" prefHeight="17.0" prefWidth="119.0" text="Average duration was" />
+                  <Label layoutX="51.0" layoutY="120.0" text="Average distance was" />
+                  <Label alignment="CENTER_RIGHT" layoutX="52.0" layoutY="140.0" prefHeight="17.0" prefWidth="119.0" text="Average duration was" />
                   <Label fx:id="runningAmount" layoutX="193.0" layoutY="40.0" text="0" />
                   <Label fx:id="skiingAmount" layoutX="193.0" layoutY="60.0" text="0" />
                   <Label fx:id="strengthAmount" layoutX="193.0" layoutY="80.0" text="0" />
                   <Label fx:id="otherAmount" layoutX="193.0" layoutY="100.0" text="0" />
-                  <Label fx:id="averageDistance" layoutX="193.0" layoutY="140.0" text="0" />
-                  <Label fx:id="averageDuration" layoutX="193.0" layoutY="160.0" text="0" />
+                  <Label fx:id="averageDistance" layoutX="193.0" layoutY="120.0" text="0" />
+                  <Label fx:id="averageDuration" layoutX="193.0" layoutY="140.0" text="0" />
                   <Label layoutX="220.0" layoutY="40.0" text="times this month" />
                   <Label layoutX="220.0" layoutY="60.0" text="times this month" />
                   <Label layoutX="220.0" layoutY="80.0" text="times this month" />
                   <Label layoutX="220.0" layoutY="100.0" text="times this month" />
-                  <Label layoutX="220.0" layoutY="140.0" prefHeight="17.0" prefWidth="90.0" text="km this month" />
-                  <Label layoutX="220.0" layoutY="160.0" prefHeight="17.0" prefWidth="90.0" text="min this month" />
+                  <Label layoutX="220.0" layoutY="120.0" prefHeight="17.0" prefWidth="90.0" text="km this month" />
+                  <Label layoutX="220.0" layoutY="140.0" prefHeight="17.0" prefWidth="90.0" text="min this month" />
                   <Label alignment="CENTER_RIGHT" layoutX="168.0" layoutY="5.0" prefHeight="17.0" prefWidth="76.0" text="Current goal:">
                      <font>
                         <Font size="11.0" />
@@ -113,9 +113,9 @@
                   </Label>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+            <Pane prefHeight="166.0" prefWidth="412.0" GridPane.rowIndex="3">
                <children>
-                  <Button fx:id="backFromOverview" alignment="CENTER" contentDisplay="CENTER" layoutX="47.0" layoutY="2.0" mnemonicParsing="false" onAction="#handleBackFromOverview" prefHeight="72.0" prefWidth="200.0" text="Back" textAlignment="CENTER">
+                  <Button id="sale" fx:id="backFromOverview" alignment="CENTER" contentDisplay="CENTER" layoutX="48.0" layoutY="28.0" mnemonicParsing="false" onAction="#handleBackFromOverview" prefHeight="74.0" prefWidth="200.0" stylesheets="@stylesheet.css" text="Back" textAlignment="CENTER">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -123,12 +123,12 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="save" layoutX="268.0" layoutY="2.0" mnemonicParsing="false" onAction="#handleSaveToFile" prefHeight="33.0" prefWidth="119.0" text="Save to file">
+                  <Button id="sale" fx:id="load" layoutX="268.0" layoutY="61.0" mnemonicParsing="false" onAction="#handleLoadFromFile" prefHeight="33.0" prefWidth="119.0" style="-fx-font-size: 15;" stylesheets="@stylesheet.css" text="Load from file">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="load" layoutX="268.0" layoutY="40.0" mnemonicParsing="false" onAction="#handleLoadFromFile" prefHeight="33.0" prefWidth="119.0" text="Load from file">
+                  <Button id="sale" fx:id="save" layoutX="268.0" layoutY="7.0" mnemonicParsing="false" onAction="#handleSaveToFile" prefHeight="33.0" prefWidth="119.0" style="-fx-font-size: 16;" stylesheets="@stylesheet.css" text="Save to file">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
